--- a/dark.css
+++ b/dark.css
@@ -1,18 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bellota:wght@700&family=Pacifico&display=swap');
+*{
+  box-sizing: border-box;
+}
+
 body{
   margin: 0 5%;
   background-color: rgb(14, 9, 39);
 }
 
-*{
-  box-sizing: border-box;
-}
-
 #logo{
   text-align: center;
   margin: 5px 0;
-  color: white;
+  color: #fff;
 }
 
 #imglogo{
@@ -44,21 +43,16 @@ body{
   color: white;
 }
 
-a{
+.footer{
   text-decoration: none;
   color:gray;
   margin: 0 auto;
 }
 
-hr{
-  color: black;
-  background-color: black;
-}
-
 #about{
   color: gray;
   background-color: rgb(251, 243, 252);
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   font-size: large;
   padding: 10px;
   border-radius: 10px;
@@ -74,37 +68,21 @@ button {
   color: #fff;
   max-width: 350px;
   border: 1px purple solid;
+  border-radius: 20px;
   font-size: larger;
   letter-spacing: 2px;
   padding: 10px 30px;
-  overflow: hidden;
   margin: 10px auto;
-  position: relative;
 }
 
-#divdlbtn{
+#download{
   display: flex;
 }
 
 button:focus {
-  outline: none;
-}
-
-button .circle {
-  position: absolute;
-  background-color: #fff;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  animation: scale 0.5s ease-out;
-}
-
-@keyframes scale {
-  to {
-    transform: translate(-50%, -50%) scale(3);
-    opacity: 0;
-  }
+  outline: 1px solid purple;
+  background-color: white;
+  color: purple;
 }
 
 img {
@@ -128,12 +106,4 @@ img {
   transform: translateX(0);
   transition: transform 0.5s ease-in-out;
   border-radius: 10px;
-}
-
-.btn:hover {
-  opacity: 0.9;
-}
-
-.btn:focus {
-  outline: none;
 }
